--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-json-schema-proptypes",
+  "name": "@ruhmesmeile/react-json-schema-proptypes",
   "version": "0.4.0",
   "description": "Dynamically generate React propType validators based on a JSON schema",
   "main": "lib/index.js",
